# positroid-structure-relu-networks

./: .gitignore  README.md  justfile  pyproject.toml
papers/1-positroid-structure/: main.tex
scripts/: generate_blog_figures.py  generate_paper_figures.py  generate_pruning_figures.py  generate_transformer_figures.py  generate_update_figures.py  pruning_animation.py
src/positroid/arrangement/: hyperplane.py
src/positroid/datasets/: __init__.py  digits.py  mnist.py  toy2d.py
src/positroid/experiments/: __main__.py  activation_positroid.py  attention_positroid.py  counterexample_search.py  diagnose_created.py  matroid_evolution.py  mnist_experiment.py  multilayer.py  non_tp_baseline.py  optimization_diagnosis.py  (+7 more)
tests/arrangement/: test_hyperplane.py
tests/datasets/: test_digits.py  test_mnist.py  test_toy2d.py
tests/experiments/: test_activation_positroid.py  test_counterexample_search.py  test_matroid_evolution.py  test_multilayer.py  test_non_tp_baseline.py  test_positroid_network_experiment.py  test_pruning.py  test_scale_evolution.py  test_trained_positroid.py
tests/linalg/: test_minors.py  test_totally_positive.py
tests/matroid/: test_contiguous_positroid.py  test_linear_matroid.py  test_matroid.py  test_plabic.py  test_positroid.py  test_positroid_support.py
tests/network/: test_positroid_network.py  test_relu_network.py  test_train.py
tests/positroid_cell/: test_boundary_map.py
tests/transformer/: test_analysis.py  test_det_mlp.py  test_model.py  test_positroid_attention.py  test_positroid_lora.py  test_positroid_moe.py  test_tropical_mlp.py
(+22 files in other folders)
